# m1_ecostats

./: README.md  base.py  conditionnels.py  exercice_conditionnel.py  mon_petit_fichier.py  mon_petit_notebook.ipynb  mon_petit_pandas.ipynb  pyproject.toml
collection/: dict.py  exercice_list_profiling.py  generator.py  listes.py  set.py  tuple.py
collections/: exercice_list_profiling.py  generator.py  listes.py
conditionnels/: conditionnels.py  exercice_conditionnel.py
custom_types/classes_part/: calculette.py  classes.py  exemple.py
custom_types/dataclasses_examples/: basic_usage.py  dataclass_point.py  example.py  exercice_produits.py
custom_types/enumeration/: exemple.py  exercice_enum.py
fonctions/: exemple_fonction.py  exercice.py  test_fonction.py  time_tracker.py
fonctions/TDD/: code_tdd.py  exercice_tdd.py  microwave_command.py  test_microwave_command.py
parallism/: usage_numpy.py
plots/: density_plots.py  mon_petit_plot.py  multiple_subplots.py
projets/: 1_librairie.md  2_regression_lineaire.md  3_agent_conversationnel.md
use_case_t_test/: exemple.py  student_result_data_object.py  student_test.py
use_case_t_test/data/: student_result.py
use_case_t_test/tests/: test_student_result.py  test_student_result_data_object.py  test_student_test.py
